--- a/docs/latex/relax.tex
+++ b/docs/latex/relax.tex
@@ -111,6 +111,7 @@
 \setlength{\cfttabnumwidth}{12mm}
 
 % Maths commands.
+\setcounter{MaxMatrixCols}{20}
 \newcommand{\Par}{{\scriptscriptstyle \parallel}}
 \newcommand{\Per}{{\scriptscriptstyle \perp}}
 \newcommand{\Diff}{\mathfrak{D}}
