--- a/docs/latex/dispersion_software.tex
+++ b/docs/latex/dispersion_software.tex
@@ -126,6 +126,12 @@ Bayesian Information Criterion (BIC)            & \no  & \no  & \no  & \no  & \n
 F-testing (ANOVA statistics)                    & \no  & \no  & \no  & \yes & \yes & \no  & \no  & \no  & \no  \\
 
 \vspace{-5pt} \\
+\textbf{Data and model testing} \\
+\cmidrule(lr){1-1}
+Insignificant dispersion curve tests            & \no  & \no  & \no  & \yes  & \no  & \no  & \no  & \no  & \yes \\
+Model elimination tests                         & \no  & \no  & \no  & \no   & \no  & \no  & \no  & \no  & \yes \\
+
+\vspace{-5pt} \\
 \textbf{Programming languages} \\
 \cmidrule(lr){1-1}
 Python                      & \no  & \no  & \no  & \yes & \no  & \yes & \no  & \yes & \yes \\
