Added the tex > 1.0 model elimination rule for the dispersion analysis.

--- a/docs/latex/dispersion.tex
+++ b/docs/latex/dispersion.tex
@@ -1241,7 +1241,8 @@ The following hard coded rules are used to eliminate models:
 \begin{subequations}
 \begin{gather} 
     \pA \leqslant 0.501, \\
-    \pA \geqslant 0.999.
+    \pA \geqslant 0.999, \\
+    \tex \geqslant 1.0.
 \end{gather} 
 \end{subequations}
 
