Updated the description of the dispersion auto-analysis in the manual.

--- a/docs/latex/dispersion.tex
+++ b/docs/latex/dispersion.tex
@@ -959,7 +959,7 @@ It can be summarised as:
 \item[Per-model error analysis:]  If desired, Monte Carlo simulations for error propagation can be performed for each model.  This does however require far greater computation time.
 \item[Model selection:]  If more than one model is analysed, AIC model selection will be performed to judge statistical significance of the models \citep{Akaike73}.  This is used to determine if statistically significant $\Rex$ contributions can be extracted form the data, as well as determine if one model is better than the other.  Different statistical techniques such as AICc and BIC can be used when using the script UI \citep{HurvichTsai89,Schwarz78}.  The AIC, AICc and BIC equations for NMR relaxation data were derived in \citet{dAuvergneGooley03}.  In most cases, the list models to choose from should be severely limited.  The results will be stored in a new `final' data pipe and output files placed in the \directory{final} directory.
 \item[Error analysis:]  Monte Carlo simulations for error propagation is performed on the final data pipe (see Section~\ref{uf: monte_carlo.setup} on page~\pageref{uf: monte_carlo.setup} as well as the descriptions for all of the other \uf{monte\_carlo} user functions).  Model elimination is performed again to remove the Monte Carlo simulations which have failed.
-\item[Output file creation:]  For each of the models and the final model selection results, the \uf{relax\_disp.plot\_exp\_curves} (Section~\ref{uf: relax_disp.plot_exp_curves} on page~\pageref{uf: relax_disp.plot_exp_curves}), \uf{grace.write} (Section~\ref{uf: grace.write} on page~\pageref{uf: grace.write}) and \uf{value.write} (Section~\ref{uf: value.write} on page~\pageref{uf: value.write}) user functions will be called to generate all the output files you would need.  Additional output files can be created after the analysis using the user functions manually.
+\item[Output file creation:]  For each of the models and the final model selection results, the \uf{relax\_disp.plot\_disp\_curves} (Section~\ref{uf: relax_disp.plot_disp_curves} on page~\pageref{uf: relax_disp.plot_disp_curves}), \uf{relax\_disp.plot\_exp\_curves} (Section~\ref{uf: relax_disp.plot_exp_curves} on page~\pageref{uf: relax_disp.plot_exp_curves}), \uf{relax\_disp.write\_disp\_curves} (Section~\ref{uf: relax_disp.write_disp_curves} on page~\pageref{uf: relax_disp.write_disp_curves}), \uf{grace.write} (Section~\ref{uf: grace.write} on page~\pageref{uf: grace.write}) and \uf{value.write} (Section~\ref{uf: value.write} on page~\pageref{uf: value.write}) user functions will be called to generate all the output files you would need.  These generate both Grace 2D plots of the data as well as plain text files.  Additional output files can be created after the analysis by using the user functions manually.
 \end{description}
 
 All these steps will be shown in full detail in the relax logs.
